# spaceflights-try1

./: init_project.sh  kedro_conf.yml  project_setup.py
kedro/: README.md  pyproject.toml
kedro/conf/base/: logging.yml
kedro/docs/source/: conf.py
kedro/src/: pyproject.toml
kedro/src/kedro/: settings.py
kedro/src/kedro/kedro_mlrun/: setup.cfg
kedro/src/tests/: test_run.py
spaceflight/: project_setup.py  project_setup_extras.py
spaceflight-folder/: README.md  pyproject.toml
spaceflight-folder/.mlrun/: workflow.py
spaceflight-folder/conf/base/: logging.yml
spaceflight-folder/docs/source/: index.rst
spaceflight-folder/src/spaceflight_folder/: __init__.py  __main__.py  settings.py
spaceflight-folder/src/tests/: test_run.py
spaceflight-try1/: README.md  project_setup.py  pyproject.toml
spaceflight-try1/conf/base/: logging.yml
spaceflight-try1/docs/source/: conf.py  index.rst
spaceflight-try1/src/: pyproject.toml
spaceflight-try1/src/kedro_mlrun/: .coveragerc
spaceflight-try1/src/spaceflight_try1/: __init__.py  __main__.py  settings.py
spaceflight-try1/src/tests/: test_run.py
spaceflight-try2/: README.md  project_setup.py  pyproject.toml
spaceflight-try2/.mlrun/: workflow.py
spaceflight-try2/conf/base/: logging.yml
spaceflight-try2/docs/source/: conf.py  index.rst
spaceflight-try2/src/: pyproject.toml
spaceflight-try2/src/spaceflight_folder/: settings.py
spaceflight-try2/src/spaceflight_try2/: __init__.py  __main__.py  settings.py
spaceflight-try2/src/tests/: test_run.py
spaceflight/spaceflight-folder/: README.md  pyproject.toml
spaceflight/spaceflight-folder/src/: pyproject.toml
(+7 files in other folders)
