###
# This file provides the metadata and build configuration information needed to build a python distribution (package).
# All package dependencies must be put in this file (preferred over using a `setup.py` file).
# For additional information see https://setuptools.pypa.io/en/latest/, or for a walk through example of how to create
# python package see https://packaging.python.org/en/latest/tutorials/packaging-projects/
###
[metadata]
name = mck.kedro-mlrun
version = attr: kedro_mlrun.__version__
author = QuantumBlack Labs
author_email = feedback@quantumblack.com
description = kedro_mlrun
long_description = file: src/kedro_mlrun/README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
# on py38, it is not possible to install kedro>=0.18 and mlrun>=1.4 together
#   due to impossible dependency resolution
python_requires = >=3.9
include_package_data = True
install_requires =
    kedro>=0.18.0
    jinja2
    python-slugify>=7.0
    python-dotenv
    mlrun>=1.4.0, <2.0
    graphlib_backport; python_version < '3.9'
    # packages below are used but not specified by mlrun
    plotly
    scikit-learn

[options.extras_require]
test =
    pytest-cov~=2.5
    pytest-mock>=1.7.1, <2.0
    pytest~=6.2

[options.package_data]
* = README.md, RELEASE.md, tutorial.md, images/*, templates/*, *.yml

[options.packages.find]
where = src

[options.entry_points]
kedro.project_commands =
    mlrun = kedro_mlrun.cli:cli
kedro.hooks =
    mlrun = kedro_mlrun.hooks:hooks